testsuite/tests/tlks/should_fail/all.T
test('tlks007_fail', normal, compile_fail, [''])
test('tlks_fail001', normal, compile_fail, [''])
test('tlks_fail002', normal, compile_fail, [''])
test('tlks_fail003', normal, compile_fail, [''])
test('tlks_fail004', normal, compile_fail, [''])
test('tlks_fail005', normal, compile_fail, [''])
test('tlks_fail006', normal, compile_fail, [''])
test('tlks_fail007', normal, compile_fail, [''])
test('tlks_fail008', normal, compile_fail, [''])
test('tlks_fail009', normal, compile_fail, [''])
test('tlks_fail010', normal, compile_fail, [''])
test('tlks_fail011', normal, compile_fail, [''])
test('tlks_fail012', normal, compile_fail, [''])
test('tlks_fail013', normal, compile_fail, [''])
test('tlks_fail014', normal, compile_fail, [''])
test('tlks_fail015', normal, compile_fail, [''])
test('tlks_fail016', normal, compile_fail, [''])
test('tlks_fail017', normal, compile_fail, [''])
test('tlks_fail018', normal, compile_fail, [''])
test('tlks_fail019', normal, compile_fail, [''])
test('tlks_fail020', normal, compile_fail, [''])
test('tlks_fail021', normal, compile_fail, [''])
test('tlks_fail022', normal, compile_fail, [''])
test('tlks_fail023', normal, compile_fail, [''])
test('T16722', normal, compile_fail, [''])
test('T16727a', normal, compile_fail, [''])
test('T16727b', normal, compile_fail, [''])
test('T16725', normal, compile_fail, [''])
test('T16826', normal, compile_fail, [''])
test('T16756b', normal, compile_fail, [''])
